--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   equatable: ^0.2.0
   meta: ^1.1.6
   http: ^0.12.0+2
+  flutter_secure_storage: ^3.2.1
 
 dev_dependencies:
   flutter_test:
